--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,14 @@ h1 {
 
 }
 
+.video {
+    display: block;
+    display: inline;
+    text-align: center;
+    width: 100%;
+    margin: 0 5%;
+}
+
 .col3 img {
     padding: 6px;
 }
