--- a/css/style.css
+++ b/css/style.css
@@ -369,16 +369,12 @@ h1 {
     border-radius: 0%;
 }
 
-.fotos {
-
-}
-
 .video {
     display: block;
-    display: inline;
+
     text-align: center;
-    width: 100%;
-    margin: 0 5%;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .col3 img {
