--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,16 @@ h1 {
     text-align: center;
     width: 50%;
     margin: 0 auto;
+    border-style: double;
+    border-color: #61f161;
+    border-radius: 5%;
+}
+
+.audio {
+    display: block;
+    text-align: center;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .col3 img {
@@ -386,6 +396,9 @@ h1 {
     border-image-slice: 100%;
     border-image-width: 1;
     border-image-repeat: stretch;
+    border-style: groove;
+    border-color: #61f161;
+    border-radius: 25%;
 }
 
 .cb {
@@ -402,6 +415,7 @@ h1 {
  width: 25%;
  border-style: groove;
  border-color: #279f43;
+ text-align: center;
 }
 
 .formregister {
