--- a/css/style.css
+++ b/css/style.css
@@ -476,3 +476,13 @@ h1 {
     background-color: #101010;
     color: white;
 }
+
+.dropdown {
+    display: inline-block;
+    position: relative;
+}
+
+.color {
+    background-color: #101010;
+    color: white;
+}
